# upload-scripts

./: .gitignore  LICENSE  README.md  compare_runs.py  main.py  manage_collection.py  metadata_handler.py  metadata_schema.py  notes.md  pyproject.toml  run_queries.py  test_files.py  update_embeddings.py  upload.py  upload_all.sh  upload_meilisearch.py
ner/: main.py  pyproject.toml  validate.py
processors/: __init__.py  base.py  filesystem.py
