[project]
name = "constitutional-observer-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "tqdm>=4.67.1",
    "typesense>=1.3.0",
    "meilisearch>=0.40.0",
    "more-itertools>=10.8.0",
    "httpx>=0.28.1",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
